--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="stats.js"></script>
+    <script src="stats.js" async></script>
     <div class="contacts">
       <div class="stickyHeader">0</div>
     </div>
+    <button id="add_button">Добавить ещё</button>
     <script src="contacts.js"></script>
   </body>
 </html>
